Fixed Education header alignment

--- a/Style.css
+++ b/Style.css
@@ -150,6 +150,7 @@ margin-left: 1rem;
 }
 .ItemBox{
   padding: 1rem;
+  width: 320px;
 }
 .EducationList {
   color: black;
